# climax

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
clipboard_maximizer/: __init__.py  cli.py  clipboard_manager.py  copy-linux-xclip.sh  copy-macos.applescript  copy-windows.ps1
clipboard_maximizer/.github/workflows/: release.yaml
tests/: test_clipboard_manager.py
