[tool.poetry]
name = "clipboard-maximizer"
version = "0.1.0"
description = ""
authors = ["lumpenspace <lumpenspace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^4.1.0"


[tool.poetry.scripts]
climax = "clipboard_maximizer.cli:main"
test = "pytest:main"